# SudokuSolver

./: .appveyor.yml  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  SudokuSolver.xml  appveyor.yml  problempuzzle  puzzle16  puzzle4  puzzle9  sample
.travis/cmake/: CodeCoverage.cmake
Debug/: makefile
Debug/src/: subdir.mk
dlx/: CMakeLists.txt
dlx/include/: DLNode.hpp  DLX.hpp
dlx/src/: DLNode.cpp  DLX.cpp
main/: CMakeLists.txt  main.cpp
sample/: puzzle16_small  puzzle25  puzzle4  puzzle9_small  sample  single_puzzle
src/: CMakeLists.txt  DLNode.cpp  DLNode.hpp  DLNode_test.cpp  DLX.cpp  DLX.hpp  DLX_test.cpp  SimpleSudokuSolver.cpp  Sudoku.cpp  Sudoku.h  Sudoku.hpp  SudokuSolver.cpp  SudokuSolver.h  SudokuSolver.hpp  SudokuSolver_test.cpp  SudokuSolver_test.h  SudokuSolver_test.hpp  Sudoku_test.cpp  Sudoku_test.h  Sudoku_test.hpp  Test.cpp  main.cpp
sudokuSolver/: CMakeLists.txt
sudokuSolver/include/: Sudoku.hpp  SudokuSolver.hpp
sudokuSolver/src/: Sudoku.cpp  SudokuSolver.cpp
test/: CMakeLists.txt  DLX_test.cpp  DLX_test.hpp  SudokuSolver_test.cpp  SudokuSolver_test.h  Sudoku_test.h
test/dlx_test/: CMakeLists.txt  DLX_test.cpp
test/sudokuSolver_test/: CMakeLists.txt  SudokuSolver_test.cpp  Sudoku_test.cpp
